[metadata]
name = sals_sports_simulator
version = 1.2
author = Sal Cacciatore
author_email = scacciatore1@gmail.com
description = Simulate the result of sporting events based on two teams' offensive and defensive stats.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    random


[options.packages.find]
where = src